<resources>
    <string name="app_name">聚商码头</string>
    <string name="item_bottom_home">首页</string>
    <string name="item_bottom_product">分类</string>
    <string name="item_bottom_message">发布求购</string>
    <string name="item_bottom_shop">购物车</string>
    <string name="refresh_pull_down_text">下拉加载</string>
    <string name="refresh_release_text">松开加载</string>
    <string name="refresh_ing_text">加载中</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guanyuwomen">【特别提示】请仔细阅读《平台隐私政策》(尤其是加粗划的
内容)并确定了解我们对您个人信息的处理规则。阅读过程中，如您有任何疑问，可联系我们的客服咨询，如您不同意议中的任何条款，您应立即停止访问平台。阅读协议的过程中如果您不同意相关协议或其中任何条款约定，您应立即停止使用平台。</string>
    <string name="scan_text">将二维码放入取景框中即可自动扫描</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="SweepCodeFailure">扫码失败</string>
    <string name="SweepCodeResult">扫描结果</string>
    <string name="gonggao">手表，是一个男人身份与品味的象征，如果你细心留意的话，你会发现很多成功男士都会佩戴手表。但手表如果选择不对的话，会显得你比较小气，下面我们一起来看看女生最讨厌男生戴什么手表，中招的就赶紧换掉啦~不然可是会降低你的男神形象哦！戴手表的男士，会让女生觉得更加有安全感，更加有型男魅力。但是，女生最讨厌男士戴那种电子手表，看起来一点气质都没有，而且还显得特别小气！
  戴手表的男士，会让女生觉得更加有安全感，更加有型男魅力。但是，女生最讨厌男士戴那种电子手表，看起来一点气质都没有，而且还显得特别小气
  电子手表给人的感觉是比较幼稚的，不够成熟稳重，女生对于成熟稳重的男士是比较有好感的！所以，电子手表不要再戴了好吗！如果你想要变得更型男一点，下面这几款手表就足够增加你的个人魅力了。
细心的人总是可以发现成功男士手表都会佩戴一块手表，而且给人的感觉很舒适很绅士。这款手表足以展现你的型男气概，手表简约而阳刚，表圈纤细优雅，巧妙环绕表盘。圆形的表镜微高于表圈，就算光线直射表盘，都可以很清晰的读取时间哦~表盘里面有皇冠的标志，寓意着权威和威严，更能突显出你的个人魅力，也能突显你对生活的高品位追求。
</string>
    <string name="help">帮助</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="shoppingku">商品库</string>
    <string name="chinese">中文</string>
    <string name="english">En</string>
    <string name="alaboyu">العرب</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="action_settings">Settings</string>
    <string name="language">中文</string>
    <string name="shoucangjia">收藏夹</string>
    <string name="shangpin">商品</string>
    <string name="dianpu">店铺</string>
    <string name="qingkong">清空</string>
    <string name="zuji">足迹</string>
    <string name="qianbao">钱包</string>
    <string name="quanbu">全部</string>
    <string name="daifukuan">待付款</string>
    <string name="daifahuo">待发货</string>
    <string name="ksbh">求购信息</string>
    <string name="xzcp">新增产品</string>
    <string name="message">消息中心</string>
    <string name="xittong_message">系统消息</string>
    <string name="address">地址管理</string>
    <string name="xinjian_address">新建地址</string>
    <string name="shopRZ">商铺认证</string>
    <string name="dianpuguanli">店铺管理</string>
    <string name="hot_tuijian">热门推荐</string>
    <string name="shangpin_tj">商铺推荐</string>
    <string name="tjzq">特价专区</string>
    <string name="qsrssnr">请输入搜索内容</string>
    <string name="zxkf">在线客服</string>
    <string name="yjfg">意见反馈</string>
    <string name="yjfg_title">你的每一个建议，都是对我们平台优化的方向和动力</string>
    <string name="tijiaoyjian">提交意见</string>
    <string name="tdyj">提点意见</string>
    <string name="gywm">关于我们</string>
    <string name="qrtcdl">确认退出登录</string>
    <string name="fabuqiugou">发布求购</string>
    <string name="xhdhwldn">喜欢的好物来找你</string>
    <string name="chanpin_mc">产品名称</string>
    <string name="miaoshu_tx">简单填写您求购的产品</string>
    <string name="cpms">*产品描述：如出口国家、价格、材质、规格等</string>
    <string name="chanpin_fl">产品分类</string>
    <string name="xzfl">选择分类</string>
    <string name="qiugouleixing">求购类型</string>
    <string name="waimaodah">外贸大货</string>
    <string name="jiaohuo_time">交货时间</string>
    <string name="qiugouNum">求购数量</string>
    <string name="qsrqgnum">请输入求购数量</string>
    <string name="anshangphuqpl">按商户起订量</string>
    <string name="zdtj9z">最多添加9张图片</string>
    <string name="fabuqiug">立即发布</string>
    <string name="qxzqglx">请选择求购类型</string>
    <string name="qxzcpfl">请选择产品分类</string>
    <string name="qxzjhsj">请选择交货时间</string>
    <string name="qxzqgsl">请选择求购数量</string>
    <string name="guanli">管理</string>
    <string name="wancheng">完成</string>
    <string name="quanxuan">全选</string>
    <string name="goujiesuan">去采购</string>
    <string name="shanchu">删除</string>
    <string name="denglu">登录</string>
    <string name="phone_denglu">手机号登录</string>
    <string name="zhanghao_pass_dl">账号密码登录</string>
    <string name="qsrsjh">请输入您的手机号</string>
    <string name="qsrnd_padd">请输入您的密码</string>
    <string name="lijizc">立即注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="yyouzhangh">已有账号，去登录</string>
    <string name="yanzhengm">请输入验证码</string>
    <string name="huoquyanzm">获取验证码</string>
    <string name="qing_newPass">请输入新密码</string>
    <string name="qing_qrnewPass">请确认新密码</string>
    <string name="gerenzhongxin">个人信息</string>
    <string name="xiugaitouxiang">修改头像</string>
    <string name="nicheng">昵称</string>
    <string name="xiugai_nicheng">修改昵称</string>
    <string name="zhanghao">账号</string>
    <string name="huiyuandengji">会员等级</string>
    <string name="zhanghu_anquan">账户安全</string>
    <string name="bangding_phone">绑定手机号码</string>
    <string name="bdsjh_q">你的账号目前绑定的手机号是</string>
    <string name="bdsjh_h">请输入你希望绑定的手机号</string>
    <string name="kefudian">客服电话</string>
    <string name="quxiao">取消</string>
    <string name="xiugai_loginpay_padd">修改登录密码</string>
    <string name="yuanmima">原密码</string>
    <string name="new_pass">新密码</string>
    <string name="queren_padd">确认密码</string>
    <string name="mima_qufen">必须是6-20个英文字母,数字或符号（除空格键），且字母，数字和标点符号至少包含两种，若包含字母，请注意区分大小写</string>
    <string name="xiugai_pay_mima">设置支付密码</string>
    <string name="shezhi_pay_mima">设置6位数字支付密码</string>
    <string name="pay_passNocf">支付密码不能是重复，连续的数字</string>
    <string name="yinhangka_bd">银行卡绑定</string>
    <string name="qtianxie_xinxi">请填写本人银行卡信息</string>
    <string name="xingming">姓名</string>
    <string name="qingshuru_xingm">请输入姓名</string>
    <string name="yinhang_khao">银行卡号</string>
    <string name="qsrbr_yhkh">请输入本人银行卡号</string>
    <string name="tuichu">退出登录</string>
    <string name="queding">确定</string>
    <string name="xiayibu">下一步</string>
    <string name="zhuche">注册</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_female">女</string>
    <string name="umeng_socialize_male">男</string>
    <string name="umeng_socialize_share">分享</string>
    <string name="no_read_message">"···"</string>
    <string name="chanpinfenlei">请选择产品分类</string>
    <string name="qiugouleixing2">请选择求购类型</string>
    <string name="jiaohuoshijian">请选择交货时间</string>
    <string name="yijian">快来写下意见吧</string>
    <string name="call">呼叫：</string>
    <string name="user_name">用户名：</string>
    <string name="talk_online">在线沟通</string>
    <string name="baokuan">爆款推荐</string>
    <string name="search">搜索</string>
    <string name="zonghe">综合</string>
    <string name="pifaliang">批发量</string>
    <string name="xiaoliang">销量</string>
    <string name="system_message">系统消息</string>
    <string name="selling">热卖推荐</string>
    <string name="special">特价专区</string>
    <string name="service">客服</string>
    <string name="store">店铺</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="add">加入购物车</string>
    <string name="ask">立即询价</string>
    <string name="buy">立即下单</string>
    <string name="all">全部</string>
    <string name="wait_h">待付款</string>
    <string name="wait_f">待发货</string>
    <string name="wait_s">待收货</string>
    <string name="complete">已完成</string>
    <string name="qsrnd_padd_again">请再次输入您的密码</string>
    <string name="identity_quyers">采购商</string>
    <string name="identity_supplier">供应商</string>
    <string name="choose_identity">选择身份</string>
    <string name="strategic_alliance">请输入战略联盟 （非必填）</string>
    <string name="foreign_trade_service_provider">外贸服务商</string>
    <string name="fabu">发布</string>
    <string name="buy_time">交货时间：</string>
    <string name="buy_style">求购类型：</string>
    <string name="chugouguojia">出口国家：</string>
    <string name="waimaoqiugou">外贸求购</string>
    <string name="waimaorexiao">外贸热销</string>
    <string name="waimaolianmeng">外贸联盟</string>
    <string name="waimaoxinpin">外贸新品</string>
    <string name="ckgj">出口国家</string>
    <string name="qxzckgj">请选择出口国家</string>
    <string name="liaotian">聊天</string>
    <string name="item_bottom_me">个人中心</string>
    <string name="fans">粉丝</string>
    <string name="visitor">访客</string>
    <string name="my_signing">我的签单</string>
    <string name="qiyexinxi">企业信息</string>
    <string name="huiyuanxinxi">会员信息</string>
    <string name="tuisongxunpan">外贸求购</string>
    <string name="yixiadan">待下单</string>
    <string name="yishouhuo">待发货</string>
    <string name="daishouhuo">待收货</string>
    <string name="yijiekuan">待结款</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="caigoudingdan">采购订单</string>
    <string name="shouhuodizhi">收货地址</string>
    <string name="caigoushangrenzhen">采购商认证</string>
    <string name="caigoushang">采购商</string>
    <string name="ordinary_member">普通会员</string>
    <string name="senior_member">高级会员</string>
    <string name="yuan_2000">2000元/押金</string>
    <string name="yuan_998">998元/年</string>
    <string name="take_photo">拍照</string>
    <string name="product_specifications_tv">商品规格</string>
    <string name="price_tv">价格</string>
    <string name="mysj">没有数据</string>
    <string name="open_huiyuan">开通会员</string>
    <string name="cahngpgli">产品管理</string>
    <string name="dianpuxinxo">店铺信息</string>
    <string name="fabuchangping">发布产品</string>
    <string name="chukoudiqu">出口地区</string>
    <string name="shuliang">数量</string>
    <string name="chengjiaoshijian">成交时间</string>
    <string name="huiyuanfenlei">会员分类</string>
    <string name="shangpshousyouxianzhangshi">商品搜索优先展示</string>
    <string name="cgxpbxcsts">采购询盘不限次数推送</string>
    <string name="cpscslwsx">产品上传数量无上限</string>
    <string name="kyckxpxx">可以查看询盘信息</string>
    <string name="kcqc">库存清仓</string>
    <string name="dongtaizs">动态展示</string>
    <string name="wu">无</string>
    <string name="wubaidaoyiq">200个</string>
    <string name="keyi">可以</string>
    <string name="congxiangcexuanqu">从相册选取</string>
    <string name="prompt_txt">建议上传尺寸如下：</string>
    <string name="shop_logo_szie">店铺logo图:64*64(px)</string>
    <string name="shop_bg_size">店铺背景图:750*300(px)</string>
    <string name="shop_carousel_size">店铺轮播图:750*300(px)</string>
</resources>