<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/rb_home"
        style="@style/bottom_bar_style"
        android:drawableTop="@drawable/bottom_bar_selector_icon_home"
        android:text="@string/item_bottom_home" />

    <RadioButton
        android:id="@+id/rb_report"
        style="@style/bottom_bar_style"
        android:drawableTop="@drawable/bottom_bar_selector_icon_performance"
        android:text="@string/item_bottom_product" />

    <RadioButton
        android:id="@+id/rb_message"
        style="@style/bottom_bar_style"
        android:drawableTop="@drawable/bottom_bar_selector_icon_message"
        android:text="@string/item_bottom_message" />

    <RadioButton
        android:id="@+id/rb_work"
        style="@style/bottom_bar_style"
        android:drawableTop="@drawable/bottom_bar_selector_icon_ranking"
        android:text="@string/item_bottom_shop" />


        <RadioButton
            android:id="@+id/rb_me"
            style="@style/bottom_bar_style"
            android:drawableTop="@drawable/bottom_bar_selector_icon_me"
            android:text="@string/item_bottom_me" />


</RadioGroup>