<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/dp_200"
    android:background="@drawable/dialog_identity_bg"
    android:paddingStart="@dimen/dp_20"
    android:paddingEnd="@dimen/dp_20"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/prompt_txt"
        android:textColor="@color/col_login_4"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/shop_logo_szie"
        android:textColor="@color/col_login_4"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/shop_bg_size"
        android:textColor="@color/col_login_4"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/shop_carousel_size"
        android:textColor="@color/col_login_4"
        android:textSize="14sp" />

</LinearLayout>