<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_margin="13dp"
            android:textColorHint="@color/text9"
            android:text="@string/qtianxie_xinxi"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/white"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/my_sprz_text"
                android:text="@string/xingming"/>
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:maxLength="16"
                android:textSize="15dp"
                android:maxLines="1"
                android:textColor="@color/text3"
                android:hint="@string/qingshuru_xingm"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:paddingStart="16dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/my_sprz_text"
                android:text="@string/yinhang_khao"/>
            <EditText
                android:id="@+id/et_yhanka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="15dp"
                android:maxLength="25"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/text3"
                android:hint="@string/qsrbr_yhkh"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_xiayibu"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="46dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:text="@string/xiayibu"
            android:background="@drawable/my_pay_red_bg"/>

    </LinearLayout>

</LinearLayout>
