<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="#f2f2f2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:gravity="left|center_vertical"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rl_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:src="@drawable/left_close" />
    </LinearLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:textColor="#000000"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/dianpuguanli"/>
    <TextView
        android:id="@+id/start_member"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:background="@drawable/buy_member"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/open_huiyuan"
        android:layout_marginRight="16dp"/>
</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#b3b2b3"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="#ffffff"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">
    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:text="@string/cahngpgli"
        android:background="@drawable/bg_chanpin"
    />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:text="@string/dianpuxinxo"
            android:gravity="center"
            android:background="@drawable/bg_shop"
            />
    </LinearLayout>
</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_marginLeft="50dp"
     android:layout_marginRight="50dp"
     android:gravity="center"
     android:text="@string/fabuchangping"
     android:textColor="#ffffff"
     android:background="@drawable/bg_fabu"/>
    </LinearLayout>
</LinearLayout>
