<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/corner_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_paizhao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="@color/actionsheet_blue"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_xiangche"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/congxiangcexuanqu"
            android:textColor="@color/actionsheet_blue"
            android:textSize="16dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/cancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner_shape"
        android:gravity="center"
        android:text="@string/quxiao"
        android:textColor="@color/actionsheet_blue"
        android:textSize="16dp" />


</LinearLayout>